Register page & MIME types & remove task list and other excessive info

--- a/RunDir/html/postnew_frame.html
+++ b/RunDir/html/postnew_frame.html
@@ -11,7 +11,7 @@
 				</tr>
 				<tr>
 					<td placeholder="Title" style="text-align: right;width: 0;">Title</td>
-					<td><input style="width: 100%;border: 1px solid rgba(0,0,0,.1);" name="username" type="text"></td>
+					<td><input style="width: 100%;border: 1px solid rgba(0,0,0,.1);" name="title" type="text"></td>
 				</tr>
 			</tbody>
 		</table>
