Use pre-prepared statements & adjusted several HTML pages and CSS

--- a/RunDir/html/postnew_frame.html
+++ b/RunDir/html/postnew_frame.html
@@ -7,15 +7,15 @@
 			<tbody>
 				<tr style="">
 					<td style="text-align: right;width: 0;">Username</td>
-					<td><input style="width: 100%;border: 1px solid rgba(0,0,0,.1);" name="username" value="%USER%" type="text" readonly="readonly"></td>
+					<td><input name="username" value="%USER%" type="text" readonly="readonly"></td>
 				</tr>
 				<tr>
 					<td placeholder="Title" style="text-align: right;width: 0;">Title</td>
-					<td><input style="width: 100%;border: 1px solid rgba(0,0,0,.1);" name="title" type="text"></td>
+					<td><input name="title" type="text"></td>
 				</tr>
 			</tbody>
 		</table>
-		<textarea name="body" placeholder="Contents Here" style="border: 1px solid rgba(0, 0, 0, 0.1); width: 100%; height: 300px;"></textarea>
+		<textarea name="body" placeholder="Contents Here" style="height: 300px;"></textarea>
 		<input type="submit" value="Post!" style="width: 100%; border: 1px solid rgba(0,0,0,.1); padding-left: auto; padding-right: auto; padding-top: 3px; padding-bottom: 3px; margin-top: 10px;">
 	</form>
 </div>
